# pure-data-mcp

./: README.md  main.py  pyproject.toml
.cursor/: mcp.json
pd/: pd_mcp_bridge.pd
src/pd_mcp/: __init__.py  bridge.py  docs.py  model.py  pd_docs.json  server.py
tests/: test_model.py
